--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <body>
     <div id="message">
       <h1>Mashups</h1>
-      <p><a href="public/maps.html">maps</a></p>
-      <p><a href="public/face.html">face</a></p>
-      <p><a href="public/youtube.html">YouTube</a></p>
+      <p><a href="maps.html">maps</a></p>
+      <p><a href="face.html">face</a></p>
+      <p><a href="youtube.html">YouTube</a></p>
     </div>
     <footer>
       <center>Copyright 2020 Ricardo Armando Machorro Reyes </center>
